[package]
name = "loog-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.86", default-features = false }
quote = { version = "1.0.36", default-features = false }
syn = { version = "2.0.70", default-features = false, features = ["extra-traits", "full", "parsing", "printing", "proc-macro"] }
unicode-ident = "1.0.12"
winnow = "0.6.13"
